--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </audio>
     <div class="container">
         <h1 class="title">NESSSSIUEUEUEU PLS BE MY GIRLFRIEND!!1!1!1(Will u? :3)</h1>
-        <img src="https://i.pinimg.com/736x/e4/72/4d/e4724dc43d60d24fa01eda5d6614715a.jpg" alt="cute-gif">
+        <img src="https://i.ibb.co.com/qFcxtx6Y/23fce05c07760d68a9b02f3ed8247c98.jpg" alt="cute-gif">
         <div class="buttons">
             <button class="btn yes-btn">Yes</button>
             <button class="btn no-btn">No</button>
@@ -21,4 +21,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
