--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <source src="https://media-hosting.imagekit.io//57d9b82542f24b31/wannabeyours.mp4?Expires=1834834240&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=fLWj0s-DFN0BYhACzcL2Vt6ns3P8OmnzOirGVSK1ntGY0QYL0c7qPjnfzsffd9Fz9SIj71ykx1RLCoDfTwvwTMBGnRQmkpfuTMp5ooR3SNK3Ql-9KF254A2SyHAzKUGdd~v7NsMUpUILrykwbM-B-hU0C31HZrhgvLd4-4~wk7xdS-TZ~pgfHGWuwqZR3-ya1adDQQ6hLAcAiRPQsy2H~4b4lbhdbXSnCdWjCuxb7zMHdIwEqJk3vwvyqHhoY4-HNtlTJXoCj54FPpqSaLBrcCkNsz-d3oUxUztdeYggJVROeUvEiaf1nZ5IlQdm0vrJzbtE93zAZnXHfEE26VZlzg__" type="video/mp4">
     </audio>
     <div class="container">
-        <h1 class="title">NESSSSIUEUEUEU PLS BE MY GIRLFRIEND!!1!1!1(Will u? :3)</h1>
+        <h1 class="title">NESSSSIUEUEUEU DO U WANNA BE MY GIRLFRIEND!!1!1!1(Will u? :3)</h1>
         <img src="https://i.ibb.co.com/qFcxtx6Y/23fce05c07760d68a9b02f3ed8247c98.jpg" alt="cute-gif">
         <div class="buttons">
             <button class="btn yes-btn">Yes</button>
@@ -21,5 +21,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
